# alcro

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: README.md  actix-embed.rs  js-rust-communicate.html  js-rust-communicate.rs  load-css-js.rs  multiple-windows.html  multiple-windows.rs  window-details.html  window-details.rs
examples/load-css-js/: index.html
examples/load-css-js/css/: style.css
examples/load-css-js/js/: script.js
src/: chrome.rs  lib.rs  locate.rs
src/chrome/: devtools.rs  os.rs  pipe.rs
src/chrome/os/: process_unix.rs  process_windows.rs
src/locate/: messagebox.rs
tests/: integration_test.rs  integration_tests.rs  tokio_test.rs
