[package]
name = "alcro"
version = "0.5.4"
authors = ["Srinivasa <m.srinivasa1234@gmail.com>"]
edition = "2018"
description = "A library to create desktop apps using rust and modern web technologies"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Srinivasa314/alcro"

[[test]]
name = "integration_test"

[[test]]
name = "tokio_test"
required-features = ["tokio"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
crossbeam-channel = "0.5.2"
tinyfiledialogs = "3.9.0"
libc = "0.2.119"
serde_derive = "1.0.136"
dashmap = "5.1.0"
thiserror = "1.0.30"
tempfile = "3.3.0"
nix = "0.23.1"

tokio = { version = "1.18.4", features = ["rt"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["namedpipeapi" , "synchapi" , "handleapi" ] }
os_str_bytes = "6.0.0"

[dev-dependencies]
actix-web = "3.3.3"
actix-rt = "2.6.0"
rust-embed = "6.3.0"
mime_guess = "2.0.4"
futures = "0.3.21"
anyhow = "1.0.55"

tokio = { version = "1.18.4", features = ["rt", "rt-multi-thread", "macros"] }
